--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "rmq"
-version = "0.0.5"
+version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "1.0.95", optional = true }
-async-trait = "0.1.85"
+anyhow = { version = "1.0.98", optional = true }
+async-trait = "0.1.88"
 dashmap = "6.1.0"
 eyre = { version = "0.6.12", optional = true }
-fred = { version = "10.0.4", features = [
+fred = { version = "10.1.0", features = [
     "default-nil-types",
     "enable-rustls-ring",
     "i-cluster",
@@ -17,13 +17,13 @@ fred = { version = "10.0.4", features = [
     "serde-json",
     "sha-1",
 ] }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.137"
-thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+thiserror = "2.0.12"
+tokio = { version = "1.44.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
-uuid = { version = "1.12.1", features = [
+uuid = { version = "1.16.0", features = [
     "fast-rng",
     "serde",
     "v7",
@@ -32,7 +32,8 @@ uuid = { version = "1.12.1", features = [
 
 [dev-dependencies]
 eyre = "0.6.12"
-rand = "0.8.5"
+rand = "0.9.0"
+sysinfo = "0.34.2"
 
 [features]
 default = []
