--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ uuid = { version = "1.16.0", features = [
 [dev-dependencies]
 eyre = "0.6.12"
 rand = "0.9.0"
+serial_test = "3.2.0"
 sysinfo = "0.34.2"
 
 [features]
